tests/outref/TCF003.ref

-- TCF003 : OCTO345 : Report syntax error when incorrect number of parameters passed to function

-- Test detection of single missing function argument
select ABS() as missingarg from names;

-- Test detection of multiple missing function arguments
select REPLACE('balloons') as missingargs from names;

-- Test detection of single extra function argument on multi-parameter function
select PG_CATALOG.PG_GET_EXPR('balloons', 11, 'bananas') as extraarg from names;

-- Test detection of multiple extra function argument on single parameter function
select ABS(12, 'lots', 'of', 'extra', 'args') as extraargs from names;

-- Test detection of single extra function argument on parameterless function
select VERSION('should be no args here') as extraarg from names;

-- Test detection of multiple extra function arguments on parameterless function
select VERSION('should', 'be', 'no', 'args', 'here') as extraargs from names;
[ERROR]: ERR_UNKNOWN_FUNCTION: No function abs defined with given parameter types (none)
LINE 3:1: select ABS() as missingarg from names;
                 ^^^
OCTO> select ABS() as missingarg from names;
[ERROR]: ERR_UNKNOWN_FUNCTION: No function replace defined with given parameter types (VARCHAR)
LINE 5:1: select REPLACE('balloons') as missingargs from names;
                 ^^^^^^^
OCTO> select REPLACE('balloons') as missingargs from names;
[ERROR]: ERR_UNKNOWN_FUNCTION: No function pg_catalog.pg_get_expr defined with given parameter types (VARCHAR, INTEGER, VARCHAR)
LINE 7:1: select PG_CATALOG.PG_GET_EXPR('balloons', 11, 'bananas') as extr...
                 ^^^^^^^^^^^^^^^^^^^^^^
OCTO> select PG_CATALOG.PG_GET_EXPR('balloons', 11, 'bananas') as extraarg from names;
[ERROR]: ERR_UNKNOWN_FUNCTION: No function abs defined with given parameter types (INTEGER, VARCHAR, VARCHAR, VARCHAR, VARCHAR)
LINE 9:1: select ABS(12, 'lots', 'of', 'extra', 'args') as extraargs from...
                 ^^^
OCTO> select ABS(12, 'lots', 'of', 'extra', 'args') as extraargs from names;
[ERROR]: ERR_UNKNOWN_FUNCTION: No function version defined with given parameter types (VARCHAR)
LINE 11:1: select VERSION('should be no args here') as extraarg from names;
                  ^^^^^^^
OCTO> select VERSION('should be no args here') as extraarg from names;
[ERROR]: ERR_UNKNOWN_FUNCTION: No function version defined with given parameter types (VARCHAR, VARCHAR, VARCHAR, VARCHAR, VARCHAR)
LINE 13:1: select VERSION('should', 'be', 'no', 'args', 'here') as extraar...
                  ^^^^^^^
OCTO> select VERSION('should', 'be', 'no', 'args', 'here') as extraargs from names;
OCTO> 
